fix: header search and request confirmation alignment

--- a/src/styles/partials/_request.scss
+++ b/src/styles/partials/_request.scss
@@ -204,6 +204,7 @@
 
   &confirmation {
     margin-top: 1.5rem;
+    display: flex;
 
     &-text {
       @include font;
